Fix overlap issue

--- a/meadows-footer-bar.css
+++ b/meadows-footer-bar.css
@@ -3,8 +3,10 @@
 .footer-bar-container {
 	position: fixed;
 	bottom: 0;
-	width: 100%;
+	max-width: 600px;
     z-index: 15;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
 .footer-bar-inner {
